Fixed issue that the background was not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,17 +82,13 @@
     @apply border-border;
   }
 
-  html {
+  body {
+    @apply text-foreground;
     background-image: url('https://iojoritxhpijprgkjfre.supabase.co/storage/v1/object/public/site-images/background_numv5r.avif');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-  }
-
-  body {
-    @apply bg-background text-foreground;
-    background-color: transparent;
   }
   img {
     @apply inline-block;
